# Hype

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  build.rs  icons.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: cargo-sources.json  rip.chroma.Hype.Devel.json  rip.chroma.Hype.Devel.yaml
data/: rip.chroma.Hype.desktop  rip.chroma.Hype.desktop.in.in  rip.chroma.Hype.gschema.xml  rip.chroma.Hype.gschema.xml.in  rip.chroma.Hype.metainfo.xml  rip.chroma.Hype.metainfo.xml.in.in
data/resources/: resources.gresource.xml
po/: POTFILES  POTFILES.in
src/: app.rs  chat_feed.rs  config.rs  main.rs
src/modals/: about.rs
