[package]
name = "hype"
version = "0.1.0"
authors = ["0chroma <me@chroma.rip>"]
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.20.7"
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_46"] }
relm4-components = "0.9"
relm4-icons = "0.9.0"
tracing = "0.1.37"
tracing-subscriber = "0.3"
