[package]
name = "hype"
version = "0.1.0"
authors = ["0chroma <me@chroma.rip>"]
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
relm4-components = "0.9"
relm4-icons = "0.10.0-beta.2"
tracing = "0.1.41"
tracing-subscriber = "0.3"

[build-dependencies]
relm4-icons-build = "0.10.0-beta.2"
glib-build-tools = "0.21.0"
